MQTT, bootstrap changes